Modernize obevo-db-sybase-ase to Java 17
covered by: anastosj.dco

Co-Authored-By: Devin AI <158243242+devin-ai-integration[bot]@users.noreply.github.com>